<resources>
    <string name="app_name">SpendSmarter</string>
    <attr name="layout_height">50dp</attr>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="total">TỔNG CỘNG</string>
    <string name="add_tracsaction">Thêm giao dịch</string>
    <string name="expenses">CHI PHÍ</string>
    <string name="incomes">THU NHẬP</string>
    <string name="input_money">Nhập số tiền</string>
    <string name="category">Loại chi tiêu :</string>
    <string name="note">Ghi chú :</string>
    <string name="note_hint">Ghi chú</string>
    <string name="add_button">Thêm</string>
    <string name="create_category">Tạo danh mục</string>
    <string name="enter_name_category_hint">Nhập tên danh mục</string>
    <string name="icon">Biểu tượng</string>
    <string name="color_add">Màu sắc</string>
    <string name="category_page">Danh mục</string>
    <string name="detail_page">Chi tiết</string>
    <string name="day">Ngày</string>
    <string name="week">Tuần</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="more">Khác</string>
    <string name="change_pass_page">Đổi mật khẩu</string>
    <string name="confirm_pass_old">Xác nhận mật khẩu cũ</string>
    <string name="input_old_pass_hint">Nhập mật khẩu cũ để xác nhận</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="input_pass_new">Nhập mật khẩu mới</string>
    <string name="confirm_pass_new">Xác nhận mật khẩu</string>
    <string name="confirm_pass_new_hint">Nhập lại mật khẩu</string>
    <string name="confirm_button">Xác nhận thay đổi</string>
    <string name="setting_page">Cài đặt</string>
    <string name="account_current">Tài khoản hiện tại</string>
    <string name="setting_font">Cài đặt font chữ</string>
    <string name="language">Ngôn ngữ</string>
    <string name="setting_notify">Cài đặt thông báo</string>
    <string name="delete_data">Xóa dữ liệu</string>
    <string name="delete_all_data">Xóa tất cả dữ liệu</string>
</resources>