<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailPage_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/background_linebound"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/back_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/arrow_left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/change_pass_page"
                android:textColor="@color/white"
                android:textSize="28dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/confirm_pass_old"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        />

                    <EditText
                        android:id="@+id/old_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/input_old_pass_hint"
                        />
                    <TextView
                        android:id="@+id/yeah_Suc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mời bạn đổi mật khẩu ở bước dưới "
                        android:textColor="@color/green_high"
                        android:visibility="visible"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/new_pass"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        />

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/input_pass_new"
                        android:inputType="textPassword"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/confirm_pass_new"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        />

                    <EditText
                        android:id="@+id/new_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/confirm_pass_new_hint"
                        android:inputType="textPassword"
                        />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/button_confirm_change_pass"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm_button"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:background="@color/green_high"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>