<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/background_linebound"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/return_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/return_arrow"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/create_category"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_category"
            android:textColor="@color/white"
            android:textSize="28sp"/>
        <TextView
            android:id="@+id/category_delete"
            android:layout_margin="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/delete"
            android:backgroundTint="@color/white"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/current_category_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/icon_circle"
            android:src="@drawable/check"
            android:backgroundTint="@color/green_high"
            android:layout_margin="15dp"
            app:tint="@color/white" />
        <EditText
            android:id="@+id/category_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_name_category_hint"
            android:layout_gravity="center"
            android:layout_marginRight="55dp"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/type_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/expenses"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/incomes"
            android:textSize="18sp" />
    </RadioGroup>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/icon"
                android:textColor="@color/black"
                android:layout_margin="15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Icon_Recycler_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"/>
            <TextView
                android:id="@+id/color_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_add"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Color_Recycler_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            <Button
                android:id="@+id/submit_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/add_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/green_high"
                android:background="@drawable/background_button_green"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>