<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTransaction"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:background="@drawable/background_linebound">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/return_icon_add_trans"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/return_arrow"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/add_tracsaction"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_tracsaction"
                android:textColor="@color/white"
                android:textSize="28sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/expense_add_trans"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:text="@string/expenses"
                android:textSize="20sp"
                android:textColor="@color/type_check"
                android:gravity="center"/>
            <TextView
                android:id="@+id/income_add_trans"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:text="@string/incomes"
                android:textSize="20sp"
                android:textColor="@color/type_check"
                android:gravity="center"/>
        </LinearLayout>
        <View
            android:id="@+id/menu_bar_add_trans"
            android:layout_width="70dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@color/white"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <EditText
            android:id="@+id/money_input"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/input_money"
            android:textAlignment="center"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:text="VND"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/money_input"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/category"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center|left"
                android:paddingStart="15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/add_trans_category_Recycler_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"/>
            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/note"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center|left"
                android:paddingLeft="15dp"/>
            <EditText
                android:id="@+id/add_trans_detail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/note_hint"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />
            <Button
                android:id="@+id/add_button_trans"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/add_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/green_high"
                android:background="@drawable/background_button_green"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>