<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailPage_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:background="@drawable/background_linebound"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/menu_detail"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/menu" />

                <TextView
                    android:id="@+id/detail_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/detail_page"
                    android:textColor="@color/white"
                    android:textSize="28dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/menu_layout_detail"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <TextView
                    android:id="@+id/expense_detail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:text="@string/expenses"
                    android:textSize="20sp"
                    android:textColor="@color/type_check"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/income_detail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:text="@string/incomes"
                    android:textSize="20sp"
                    android:textColor="@color/type_check"
                    android:gravity="center"/>
            </LinearLayout>
            <View
                android:id="@+id/menu_bar_detail"
                android:layout_width="70dp"
                android:layout_height="3dp"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background2"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:id="@+id/day_pick_wrap"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/day_detail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/day"
                    android:textSize="18sp"
                    android:textColor="@color/date_check"/>
                <TextView
                    android:id="@+id/week_detail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/week"
                    android:textSize="18sp"
                    android:textColor="@color/date_uncheck"/>
                <TextView
                    android:id="@+id/month_detail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/month"
                    android:textSize="18sp"
                    android:textColor="@color/date_uncheck"/>
                <TextView
                    android:id="@+id/year_detail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/year"
                    android:textSize="18sp"
                    android:textColor="@color/date_uncheck"/>
                <TextView
                    android:id="@+id/other_detail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textSize="18sp"
                    android:textColor="@color/date_uncheck"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:gravity="center">
                <View
                    android:id="@+id/date_picker_bar_detail"
                    android:layout_width="50dp"
                    android:layout_height="3dp"
                    android:background="@color/black"/>
            </LinearLayout>
            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu_detail"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu"/>
</androidx.drawerlayout.widget.DrawerLayout>