<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categoryPage_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categoryPage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_linebound"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/menu_category"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/menu" />
                <TextView
                    android:id="@+id/category_page"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/category_page"
                    android:textColor="@color/white"
                    android:textSize="28sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/expense_category"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:text="@string/expenses"
                        android:textSize="20sp"
                        android:textColor="@color/type_check"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/income_category"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:text="@string/incomes"
                        android:textSize="20sp"
                        android:textColor="@color/type_check"
                        android:gravity="center"/>
                </LinearLayout>
                <View
                    android:id="@+id/menu_bar_category"
                    android:layout_width="70dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center"
                    android:background="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recycler_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"/>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu_category"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu" />
</androidx.drawerlayout.widget.DrawerLayout>